Updated Padding to resolve close button overlap issue

--- a/packages/components/src/form-token-field/style.scss
+++ b/packages/components/src/form-token-field/style.scss
@@ -94,7 +94,7 @@
 
 	&.is-borderless {
 		position: relative;
-		padding: 0 20px 0 0;
+		padding: 0 24px 0 0;
 
 		.components-form-token-field__token-text {
 			background: transparent;
